Fixed valign on tablet.

--- a/sass/_tablet.scss
+++ b/sass/_tablet.scss
@@ -20,8 +20,6 @@
 }
 
 #jumbotron {
-	height: 573px;
-
 	.intro-container {
 		width: auto;
 		position: relative;
